--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 body {
+    /*
+    background-color: #C8B8AC;
+    */
+
     background-color: #619885;
-    color: #69594E;
+    color: #4B3D54;
     max-width: 1340px;
     margin-left: 40px;
 }
 
 h1 {
     text-align: center;
-    font-size: 68px;
+    font-size: 70px;
     font-weight: 700;
 
+}
+
+h2 {
+    font-size: 54px;
+    padding: 10px 0 0 20px;
 }
 
 h3 {
@@ -19,6 +28,7 @@ h3 {
 
 .explain {
     font-size: 28px;
+    padding: 0 20px 0 20px;
 }
 
 .buttons {
@@ -40,7 +50,7 @@ input {
 }
 
 .fizzBuzz {
-    color: #F9E5B1;
+    color: #CFFFCC;
     -webkit-column-count: 5; /* Chrome, Safari, Opera */
     -moz-column-count: 5; /* Firefox */
     column-count: 5;
@@ -49,5 +59,9 @@ input {
 
 p {
     margin-top: 0;
-    font-size: 18px;
+    font-size: 20px;
+}
+
+a {
+    font-size: 20px;
 }
